8181742: Load that bypasses arraycopy has wrong memory state

Set load memory edge to the memory state right before the arraycopy.

Reviewed-by: kvn, thartmann